# mcvm

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/auth/: Cargo.toml
crates/auth/src/: db.rs  lib.rs  mc.rs  mc_msa.rs  passkey.rs
crates/cli/: .gitignore  Cargo.toml  build.rs
crates/cli/src/: docs.rs  main.rs  output.rs  secrets.rs
crates/cli/src/commands/: config.rs  files.rs  instance.rs  mod.rs  package.rs  plugin.rs  profile.rs  snapshot.rs  tool.rs  user.rs
crates/config/: Cargo.toml
crates/config/src/: instance.rs  lib.rs  package.rs  preferences.rs  profile.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  instance.rs  lib.rs  version.rs
crates/core/src/io/: minecraft.rs  mod.rs  persistent.rs  update.rs
crates/core/src/io/files/: mod.rs  paths.rs
crates/core/src/io/java/: args.rs  classpath.rs  install.rs
crates/core/src/launch/: configuration.rs  mod.rs  process.rs
crates/core/src/launch/client/: args.rs  mod.rs
crates/core/src/net/: download.rs  java.rs  mod.rs
crates/core/src/net/game_files/: assets.rs  client_meta.rs  libraries.rs  mod.rs  version_manifest.rs
crates/core/src/net/minecraft/: mod.rs
crates/core/src/user/: auth.rs  mod.rs
crates/core/src/util/: json.rs  mod.rs  secrets.rs  versions.rs
crates/mcvm_auth/: Cargo.toml
crates/mcvm_auth/src/: lib.rs  mc.rs
crates/mcvm_cli/: Cargo.toml
crates/mcvm_cli/src/: main.rs  output.rs
crates/mcvm_cli/src/commands/: instance.rs  mod.rs  package.rs  tool.rs  user.rs
crates/mcvm_core/: Cargo.toml
crates/mcvm_core/src/: config.rs  instance.rs  lib.rs  version.rs
crates/mcvm_core/src/io/: minecraft.rs  mod.rs  persistent.rs  update.rs
crates/mcvm_core/src/io/files/: mod.rs  paths.rs
crates/mcvm_core/src/io/java/: args.rs  classpath.rs  install.rs  mod.rs
crates/mcvm_core/src/launch/: configuration.rs  mod.rs  process.rs  server.rs
crates/mcvm_core/src/launch/client/: args.rs  mod.rs
crates/mcvm_core/src/net/: download.rs
crates/mcvm_core/src/net/game_files/: assets.rs  (+4 more)
crates/mcvm_core/src/user/: auth.rs  mod.rs
crates/mcvm_core/src/util/: hash.rs  secrets.rs  versions.rs
crates/mcvm_mods/: Cargo.toml
crates/mcvm_mods/src/: fabric_quilt.rs  lib.rs  paper.rs
crates/mcvm_parse/: Cargo.toml
crates/mcvm_parse/src/: conditions.rs  instruction.rs  lex.rs  lib.rs  metadata.rs  parse.rs  properties.rs  routine.rs  vars.rs
crates/mcvm_pkg/: Cargo.toml
crates/mcvm_pkg/src/: declarative.rs  lib.rs  metadata.rs  properties.rs  repo.rs  resolve.rs  script_eval.rs
crates/mcvm_schema/: Cargo.toml
crates/mcvm_schema/src/: main.rs
crates/mcvm_shared/: Cargo.toml
crates/mcvm_shared/src/: addon.rs  instance.rs  lang.rs  lib.rs  modifications.rs  output.rs  pkg.rs  versions.rs
crates/mcvm_shared/src/util/: mod.rs
crates/mods/: Cargo.toml
crates/mods/src/: fabric_quilt.rs  lib.rs  paper.rs  sponge.rs
crates/net/: Cargo.toml
crates/net/src/: download.rs  github.rs  lib.rs  modrinth.rs  neoforge.rs  smithed.rs
crates/options/: Cargo.toml
crates/options/src/: lib.rs  read.rs
crates/options/src/client/: file.rs  keybinds.rs  mod.rs
crates/options/src/server/: file.rs  mod.rs
crates/parse/: Cargo.toml
crates/parse/src/: conditions.rs  instruction.rs  lex.rs  lib.rs  parse.rs  routine.rs  vars.rs
crates/pkg/: Cargo.toml
crates/pkg/src/: declarative.rs  lib.rs  metadata.rs  properties.rs  repo.rs  resolve.rs  script_eval.rs
crates/pkg_gen/: Cargo.toml
crates/pkg_gen/src/: lib.rs  modrinth.rs  relation_substitution.rs  smithed.rs
crates/plugin/: Cargo.toml
crates/plugin/plugins/: args.rs  echo.rs  print_custom_config.rs
crates/plugin/src/: api.rs  hook_call.rs  hooks.rs  input_output.rs  lib.rs  output.rs  plugin.rs
crates/plugin/src/api/: mod.rs  output.rs  utils.rs
crates/shared/: Cargo.toml
crates/shared/src/: addon.rs  instance.rs  lang.rs  lib.rs  modifications.rs  output.rs  pkg.rs  versions.rs
crates/shared/src/lang/: mod.rs  translate.rs
crates/shared/src/util/: mod.rs  print.rs
crates/tools/: .gitignore  Cargo.toml
crates/tools/src/: main.rs  smithed_api.rs
crates/tools/src/gen_pkg/: batched.rs  mod.rs  modrinth.rs  smithed.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  data.rs  main.rs  output.rs
gui/src-tauri/src/commands/: instance.rs  launch.rs  misc.rs  mod.rs  package.rs  plugin.rs  user.rs
plugins/: Cargo.toml  Makefile  build.rs
plugins/plugins/archive/: main.rs  plugin.json
plugins/plugins/args/: main.rs  plugin.json  test.js
plugins/plugins/automate/: main.rs  plugin.json
plugins/plugins/backup/: backup.rs  main.rs  plugin.json
plugins/plugins/config_split/: main.rs  plugin.json
plugins/plugins/custom_files/: main.rs  plugin.json
plugins/plugins/docs/: docs.rs  main.rs  plugin.json
plugins/plugins/extra_versions/: plugin.json
plugins/plugins/fabric_quilt/: main.rs  plugin.json
plugins/plugins/gen_pkg/: batched.rs  main.rs  modrinth.rs  plugin.json  smithed.rs
plugins/plugins/lang/: plugin.json
plugins/plugins/mcvm_transfer/: main.rs  plugin.json
plugins/plugins/modrinth/: main.rs  page.html  plugin.json
plugins/plugins/modrinth_api/: main.rs  plugin.json
plugins/plugins/options/: main.rs  plugin.json
plugins/plugins/packhost/: main.rs  plugin.json
plugins/plugins/paper/: main.rs  plugin.json
plugins/plugins/resource_pack_host/: main.rs  plugin.json
plugins/plugins/scripthook/: main.rs  plugin.json
plugins/plugins/server_restart/: main.rs  plugin.json
plugins/plugins/smithed/: main.rs  page.html  plugin.json
plugins/plugins/smithed_api/: main.rs  plugin.json
plugins/plugins/snapshot/: main.rs  plugin.json  snapshot.rs
plugins/plugins/sponge/: main.rs  plugin.json
plugins/plugins/stats/: main.rs  plugin.json
plugins/plugins/webtools/: all_tools.html  main.rs  plugin.json  tool_component.html  tool_page.html
plugins/plugins/weld/: .gitignore  local_plugin.json  main.py  mcvm_weld.py  plugin.json
plugins/plugins/xmcl_transfer/: main.rs  plugin.json
(+654 files in other folders)
