[package]
name = "mcvm"
version = "0.16.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A command-line Minecraft launcher and package manager"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[lib]
name = "mcvm"
path = "src/lib.rs"

[workspace]
members = [
	"crates/mcvm_auth",
	"crates/mcvm_core",
	"crates/mcvm_cli",
	"crates/mcvm_mods",
	"crates/mcvm_parse",
	"crates/mcvm_pkg",
	"crates/mcvm_shared",
	"crates/mcvm_tools",
]

[features]
arc = []
disable_profile_update_packages = []
schema = [
	"dep:schemars",
	"mcvm_pkg/schema",
	"mcvm_shared/schema",
	"mcvm_core/schema",
]

[[bin]]
name = "man_int_fabric_core"
path = "test/manual_integration/fabric_core.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.73"
bytes = "1.4.0"
cfg-match = "0.2.1"
directories = "5.0.0"
futures = "0.3.26"
hex = "0.4.3"
itertools = "0.11.0"
libflate = "2.0.0"
oauth2 = "4.4.1"
rand = "0.8.5"
reqwest = { version = "0.11.15", default_features = false, features = [
	"json",
	"rustls-tls",
] }
schemars = { version = "0.8.15", optional = true }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
sha2 = "0.10.7"
mcvm_core = { path = "crates/mcvm_core", version = "0.1.0" }
mcvm_mods = { path = "crates/mcvm_mods", version = "0.1.0" }
mcvm_parse = { path = "crates/mcvm_parse", version = "0.10.0" }
mcvm_pkg = { path = "crates/mcvm_pkg", version = "0.8.0" }
mcvm_shared = { path = "crates/mcvm_shared", version = "0.10.0" }
minecraft-msa-auth = "0.3.0"
shellexpand = { version = "3.0.0", features = ["path"] }
tar = "0.4.38"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "fs", "rt-multi-thread"] }
zip = "0.6.4"
zip-extract = "0.1.2"
