[package]
name = "mcvm"
version = "0.20.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A command-line Minecraft launcher and package manager"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[profile.release]
lto = "thin"
strip = true

[lib]
name = "mcvm"
path = "src/lib.rs"

[workspace]
members = [
	"crates/auth",
	"crates/cli",
	"crates/core",
	"crates/mods",
	"crates/options",
	"crates/parse",
	"crates/pkg",
	"crates/plugin",
	"crates/shared",
	"crates/tools",
]

[features]
default = ["builder"]
arc = []
builder = []
disable_profile_update_packages = []
schema = [
	"dep:schemars",
	"mcvm_options/schema",
	"mcvm_pkg/schema",
	"mcvm_shared/schema",
	"mcvm_core/schema",
]

[[bin]]
name = "man_int_fabric_core"
path = "test/manual_integration/fabric_core.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.73"
cfg-match = "0.2.1"
directories = "5.0.0"
hex = "0.4.3"
itertools = "0.11.0"
libflate = "2.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.2", default_features = false, features = [
	"json",
	"rustls-tls",
] }
schemars = { version = "0.8.15", optional = true }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
sha2 = "0.10.7"
mcvm_core = { path = "crates/core", version = "0.4.0" }
mcvm_mods = { path = "crates/mods", version = "0.4.0" }
mcvm_options = { path = "crates/options", version = "0.4.0" }
mcvm_parse = { path = "crates/parse", version = "0.13.0" }
mcvm_pkg = { path = "crates/pkg", version = "0.12.0" }
mcvm_plugin = { path = "crates/plugin", version = "0.1.0", default_features = false }
mcvm_shared = { path = "crates/shared", version = "0.12.0" }
shellexpand = { version = "3.0.0", features = ["path"] }
tar = "0.4.38"
tokio = { version = "1.37.0", features = ["macros", "fs", "rt-multi-thread"] }
version-compare = "0.2.0"
zip = "0.6.4"
