[package]
name = "mcvm_plugins"
version = "0.1.0"
description = "Standard plugins for MCVM"
keywords = ["minecraft", "launcher", "game", "mc", "plugin"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcvm_plugin_args"
path = "plugins/args/main.rs"

[[bin]]
name = "mcvm_plugin_backup"
path = "plugins/backup/main.rs"

[[bin]]
name = "mcvm_plugin_config_split"
path = "plugins/config_split/main.rs"

[[bin]]
name = "mcvm_plugin_custom_files"
path = "plugins/custom_files/main.rs"

[[bin]]
name = "mcvm_plugin_docs"
path = "plugins/docs/main.rs"

[[bin]]
name = "mcvm_plugin_fabric_quilt"
path = "plugins/fabric_quilt/main.rs"

[[bin]]
name = "mcvm_plugin_gen_pkg"
path = "plugins/gen_pkg/main.rs"

[[bin]]
name = "mcvm_plugin_mcvm_transfer"
path = "plugins/mcvm_transfer/main.rs"

[[bin]]
name = "mcvm_plugin_modrinth_api"
path = "plugins/modrinth_api/main.rs"

[[bin]]
name = "mcvm_plugin_options"
path = "plugins/options/main.rs"

[[bin]]
name = "mcvm_plugin_packhost"
path = "plugins/packhost/main.rs"

[[bin]]
name = "mcvm_plugin_paper"
path = "plugins/paper/main.rs"

[[bin]]
name = "mcvm_plugin_scripthook"
path = "plugins/scripthook/main.rs"

[[bin]]
name = "mcvm_plugin_server_restart"
path = "plugins/server_restart/main.rs"

[[bin]]
name = "mcvm_plugin_sponge"
path = "plugins/sponge/main.rs"

[[bin]]
name = "mcvm_plugin_stats"
path = "plugins/stats/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
glob = { workspace = true }
iso8601-timestamp = { workspace = true }
itertools = { workspace = true }
mcvm = { workspace = true }
mcvm_core = { workspace = true }
mcvm_mods = { workspace = true }
mcvm_net = { workspace = true }
mcvm_options = { workspace = true }
mcvm_plugin = { workspace = true, features = ["api"] }
mcvm_shared = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
termimad = { workspace = true }
tokio = { workspace = true }
version-compare = { workspace = true }
zip = { workspace = true }

[build-dependencies]
zip = { workspace = true }
