[package]
name = "mcvm_auth"
version = "0.7.0"
description = "Useful authentication wrapper for Minecraft"
keywords = ["minecraft", "launcher", "game", "mc", "auth"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cfg-match = { workspace = true }
hex = { workspace = true }
mcvm_shared = { workspace = true }
nutype = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
