[package]
name = "mcvm_cli"
version = "0.8.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The command-line interface for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "cli"]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "mcvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.5.4", features = ["derive"] }
color-print = "0.3.4"
inquire = { version = "0.6.2", default_features = false, features = [
	"crossterm",
] }
itertools = "0.11.0"
mcvm = { path = "../../", version = "0.21.1", default_features = false, features = [
	"builder",
] }
reqwest = { version = "0.12.2", default_features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
termimad = "0.29.1"
tokio = { version = "1.37.0", features = ["macros", "fs", "rt-multi-thread"] }
zip = "0.6.4"

[build-dependencies]
zip = "0.6.4"

