[package]
name = "mcvm_core"
version = "0.8.0"
description = "Core functionality for launching Minecraft"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars", "mcvm_shared/schema"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cfg-match = { workspace = true }
directories = { workspace = true }
libflate = { workspace = true }
mcvm_auth = { workspace = true }
mcvm_net = { workspace = true }
mcvm_shared = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros"] }
zip = { workspace = true }
