[package]
name = "mcvm_cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The command-line interface for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "cli"]
categories = ["games", "command-line-utilities"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
color-print = "0.3.4"
inquire = "0.6.2"
itertools = "0.11.0"
mcvm = { path = "../../", version = "0.12.4" }
oauth2 = "4.4.1"
reqwest = { version = "0.11.15", default_features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["macros", "fs", "rt-multi-thread"] }
