[package]
name = "mcvm_core"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core functionality for launching Minecraft"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[features]
schema = ["dep:schemars", "mcvm_shared/schema"]

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
cfg-match = "0.2.1"
directories = "5.0.0"
futures = "0.3.26"
hex = "0.4.3"
libflate = "2.0.0"
mcvm_auth = { path = "../mcvm_auth", version = "0.1.0" }
mcvm_shared = { path = "../mcvm_shared", version = "0.10.0" }
oauth2 = "4.4.1"
reqwest = { version = "0.11.15", default_features = false, features = [
	"json",
	"rustls-tls",
] }
schemars = { version = "0.8.15", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.7"
tar = "0.4.38"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "fs", "rt-multi-thread"] }
zip = "0.6.4"
zip-extract = "0.1.2"
