[package]
name = "mcvm_mods"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Installation of game modifications for use with mcvm_core"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "modification"]
categories = ["games"]

[features]

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
cfg-match = "0.2.1"
mcvm_core = { path = "../mcvm_core", version = "0.1.1" }
mcvm_shared = { path = "../mcvm_shared", version = "0.10.0" }
minecraft-msa-auth = "0.3.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.15", default_features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "fs", "rt-multi-thread"] }
