[package]
name = "mcvm_parse"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Package script lexing, parsing, and basic evaluation for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "parse"]
categories = ["games"]

[dependencies]
anyhow = "1.0.70"
color-print = "0.3.4"
mcvm_shared = { path = "../mcvm_shared", version = "0.1.1" }
serde = { version = "1.0.152", features = ["derive"] }
