[package]
name = "mcvm_pkg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Package standard for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[dependencies]
anyhow = "1.0.70"
mcvm_parse = { path = "../mcvm_parse", version = "0.2.0" }
mcvm_shared = { path = "../mcvm_shared", version = "0.2.0" }
serde = { version = "1.0.152", features = ["derive"] }
