[package]
name = "mcvm_pkg"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Package standard for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[dependencies]
async-trait = "0.1.73"
anyhow = "1.0.70"
itertools = "0.10.5"
mcvm_parse = { path = "../mcvm_parse", version = "0.3.0" }
mcvm_shared = { path = "../mcvm_shared", version = "0.3.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
