[package]
name = "mcvm_schema"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Simple JSON schema generation for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[dependencies]
anyhow = "1.0.70"
mcvm = { path = "../../", version = "0.14.0" }
schemars = "0.8.15"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
