[package]
name = "mcvm_shared"
version = "0.9.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Shared libraries and utilities for mcvm crates"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[features]
schema = ["dep:schemars"]

[dependencies]
anyhow = "1.0.70"
current_locale = "0.1.1"
schemars = { version = "0.8.15", optional = true }
serde = { version = "1.0.152", features = ["derive", "rc"] }
