[package]
name = "mcvm_mods"
version = "0.5.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Installation of game modifications for use with mcvm_core"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "modification"]
categories = ["games"]

[features]

[dependencies]
anyhow = "1.0.70"
mcvm_core = { path = "../core", version = "0.5.1" }
mcvm_shared = { path = "../shared", version = "0.12.0" }
reqwest = { version = "0.12.2", default_features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.37.0", features = ["macros", "fs", "rt-multi-thread"] }
