[package]
name = "mcvm_mods"
version = "0.9.0"
description = "Installation of game modifications for use with mcvm_core"
keywords = ["minecraft", "launcher", "game", "mc", "modification"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
mcvm_core = { workspace = true }
mcvm_shared = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
