[package]
name = "mcvm_options"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Game options generation for Minecraft"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "options"]
categories = ["games"]

[features]
schema = [
	"dep:schemars",
	"mcvm_shared/schema",
]

[dependencies]
anyhow = "1.0.70"
itertools = "0.11.0"
mcvm_shared = { path = "../shared", version = "0.10.1" }
schemars = { version = "0.8.15", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
