[package]
name = "mcvm_options"
version = "0.5.0"
description = "Game options generation for Minecraft"
keywords = ["minecraft", "launcher", "game", "mc", "options"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars", "mcvm_shared/schema"]

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
mcvm_shared = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
