[package]
name = "mcvm_parse"
version = "0.13.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Package script lexing, parsing, and basic evaluation for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "parse"]
categories = ["games"]

[features]
schema = ["dep:schemars", "mcvm_shared/schema"]

[dependencies]
anyhow = "1.0.70"
mcvm_shared = { path = "../shared", version = "0.12.0" }
schemars = { version = "0.8.15", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
