[package]
name = "mcvm_parse"
version = "0.13.0"
description = "Package script lexing, parsing, and basic evaluation for mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "parse"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars", "mcvm_shared/schema"]

[dependencies]
anyhow = { workspace = true }
mcvm_shared = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
