[package]
name = "mcvm_plugin"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Plugin loading and definition for mcvm"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "plugin"]
categories = ["games"]

[features]
default = ["api"]
api = []

[[bin]]
name = "print_custom_config"
path = "plugins/print_custom_config.rs"

[[bin]]
name = "echo"
path = "plugins/echo.rs"

[dependencies]
anyhow = "1.0.70"
base64 = "0.22.0"
mcvm_shared = { path = "../shared", version = "0.12.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
