[package]
name = "mcvm_plugin"
version = "0.3.0"
description = "Plugin loading and definition for mcvm"
keywords = ["minecraft", "launcher", "game", "mc", "plugin"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["api"]
api = []

[[bin]]
name = "print_custom_config"
path = "plugins/print_custom_config.rs"

[[bin]]
name = "echo"
path = "plugins/echo.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
mcvm_core = { workspace = true }
mcvm_shared = { workspace = true }
mcvm_pkg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
