[package]
name = "mcvm_shared"
version = "0.14.0"
description = "Shared libraries and utilities for mcvm crates"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars"]

[dependencies]
anyhow = { workspace = true }
cfg-match = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
sys-locale = { workspace = true }
