[package]
name = "mcvm_tools"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Utilities for MCVM"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/mcvm"
keywords = ["minecraft", "launcher", "game", "mc"]
categories = ["games"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
mcvm = { path = "../../", version = "0.18.0", features = ["schema"] }
reqwest = { version = "0.12.2", default_features = false, features = [
	"json",
	"rustls-tls",
] }
schemars = "0.8.15"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
tokio = { version = "1.36.0", features = ["macros", "fs", "rt-multi-thread"] }
