[package]
name = "mcvm_tools"
version = "0.6.0"
description = "Utilities for MCVM"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
iso8601-timestamp = { workspace = true }
mcvm = { workspace = true, features = ["schema"] }
mcvm_options = { workspace = true, features = ["schema"] }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
