[package]
name = "mcvm_gui"
version = "0.1.0"
description = "Graphical interface for MCVM"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
itertools = { workspace = true }
mcvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "1", features = [ "protocol-asset", "shell-open"] }
tokio = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
